updated env example file

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 NODE_ENV = dev
 PORT = 1234
 MONGO_URI = mongodb://<USER>:<PASSWORD>@<DOMAIN>:<PORT>/<DB>
+JWT_SECRET = token
+JWT_EXPIRES_IN = '30d'
